--- a/apps/trio/src/styles.scss
+++ b/apps/trio/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://use.typekit.net/afn7rsx.css');
 
 body,
 html {
@@ -6,4 +7,5 @@ html {
   padding: 0;
   overflow-x: hidden;
   box-sizing: border-box;
+  font-family: paralucent, Tahoma, Geneva, Verdana, sans-serif;
 }
