--- a/libs/flyer/src/lib/flyer.scss
+++ b/libs/flyer/src/lib/flyer.scss
@@ -3,7 +3,7 @@
   background-position: center;
   background-size: contain;
   min-height: 100vh;
-  padding: 4vh 16vw;
+  padding: 4vh 24vw;
 
   &__header {
     height: 10vh;
@@ -12,7 +12,7 @@
     align-items: flex-start;
 
     &__ahab-logo {
-      height: 50%;
+      width: 70px;
     }
 
     &__instagram {
@@ -23,6 +23,25 @@
   }
 
   &__content {
+    padding: 4vw 70px;
+
+    &__schools {
+      color: #fff;
+      margin-left: 24px;
+
+      p {
+        margin: 2px 0;
+        text-transform: uppercase;
+      }
+    }
+
+    h1 {
+      color: #fff;
+      font-family: anton;
+      font-weight: 400;
+      font-style: normal;
+    }
+
     &__pipe {
       height: 500px;
     }
