--- a/libs/flyer/src/lib/flyer.scss
+++ b/libs/flyer/src/lib/flyer.scss
@@ -67,5 +67,16 @@
         height: 60vh;
       }
     }
+
+    &__info {
+      z-index: 3;
+
+      &__subtitle {
+        text-transform: uppercase;
+        font-size: 2em;
+        font-weight: 600;
+        color: #fff;
+      }
+    }
   }
 }
